# mulle-objc-developer

./: .gitattributes  .gitignore  .touch  .travis.yml  CLONE.md  CMakeLists.txt  CMakePackage.cmake  CMakePackage.txt  Dockerfile  INIT.md  LICENSE  README.md  RELEASENOTES.md  install-ubuntu.sh  installer  mulle-clang-add-to-xcode  mulle-clang-add-to-xcode.sh  mulle-logo-48x48.txt  mulle-objc-change-publisher  mulle-objc-change-tap  mulle-objc-clone  mulle-objc-clone.sh  mulle-objc-create-templates  mulle-objc-developer.sublime-project  mulle-objc-init  mulle-objc-logo-opaque-48x48.txt  mulle-objc-make-dependencies-inc  mulle-objc-print-templates  overview.dot  package.json
.bootstrap/: embedded_repositories
.github/workflows/: dockerfile-ci.yml  mulle-sde-ci.yml  semgrep.yml
.mulle-env/etc/: optionaltool
.mulle-env/share/: environment-aux.sh  environment-extension.sh  environment-project.sh  include-environment.sh
.mulle-sde/share/: extension
.mulle-sde/share/ignore.d/: 00-directories--none
.mulle-sde/share/libexec/: cmake-sourcetree-update-task.sh
.mulle/etc/env/: environment-project.sh  optionaltool  tool  tool.windows
.mulle/etc/project/: formula-info.sh  generate-formula.sh  post-release.sh  version-info.sh
.mulle/share/env/: environment-extension.sh  environment-plugin.sh  tool-extension
.mulle/share/sde/: extension
.travis.d/: before_install-aux.darwin  script
assets/dox/: TOC.md
cola/: config.plist  description.md.bud  executables.md.bud  install.md.bud  properties.plist
dox/: Xcode_7_integration.md
dox/releases/: 0.12.2.md  0.13.0.md  0.5.1.md  0.8.4.md
i386/: Dockerfile  README.md
mulle-project/: formula-info.sh  generate-formula.sh  post-release.sh  version-info.sh
src/mulle-objc/category.m/: version
templates/: .travis.yml.scion  CLONE.md.scion  CMakeLists.txt.scion  CMakePackage.txt.scion  Dockerfile.scion  INIT.md.scion  README.md.scion  install-ubuntu.sh.scion  mulle-objc-clone.scion  mulle-objc-init.scion
(+90 files in other folders)
